# tallyrun

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
bench/: measure.py
bench/results/: latest.json  tuned-lcg.json  tuned.json
bench/workloads/: Spin.java  cpu.py  dict.py  fib.js  lcg.c  mem.c  spin.c
deploy/: Dockerfile  compose.yml
docs/: BENCHMARK.md  CONTRACT.md
examples/minijudge/: README.md  judge.py
examples/minijudge/problem/: limits.json
examples/minijudge/solutions/: ac.c  mle.py  tle.py  wa.py
src/: cgroup.rs  lib.rs  main.rs  seccomp.rs
tests/: conftest.py  test_adversarial.py  test_proc.py  test_sandbox.py  test_seccomp.py
