[package]
name = "runbox"
version = "0.1.0"
edition = "2021"
description = "Judge untrusted competitive-programming code on low-variance, load-invariant virtual time (hardware instruction counting) instead of wall/CPU seconds."
license = "MIT"
repository = "https://github.com/abdogad/runbox"
keywords = ["sandbox", "judge", "competitive-programming", "perf", "isolation"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "runbox"
path = "src/lib.rs"

[[bin]]
name = "runbox"
path = "src/main.rs"

[dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
