[package]
name = "tallyrun"
version = "0.5.0"
edition = "2021"
description = "Judge untrusted competitive-programming code on low-variance, load-invariant virtual time (hardware instruction counting) instead of wall/CPU seconds."
license = "MIT"
repository = "https://github.com/abdogad/tallyrun"
keywords = ["sandbox", "judge", "competitive-programming", "perf", "isolation"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "tallyrun"
path = "src/lib.rs"

[[bin]]
name = "tallyrun"
path = "src/main.rs"

[dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
